--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 NODE_ENV = 'production'
-VUE_APP_BASE_API = 'https://vue-typescript-admin-mock-server.armour.now.sh/mock-api/v1/'
+VUE_APP_BASE_API = 'http://127.0.0.1:7001/api/v1/'
