--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 NODE_ENV = 'development'
-VUE_APP_BASE_API = 'http://127.0.0.1:7000/api/v1/'
+VUE_APP_BASE_API = 'http://192.168.50.154:7000/api/v1/'
+VUE_APP_BASE_WS = 'ws://192.168.50.154:7000/api/v1/ws'
