--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
+    "mavon-editor": "^2.9.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.0.0",
@@ -53,6 +54,7 @@
     "fibers": "^4.0.1",
     "jest": "^24.9.0",
     "js-base64": "^2.6.3",
+    "markdown": "^0.5.0",
     "prettier": "^1.19.1",
     "sass": "^1.22.10",
     "sass-loader": "^7.3.1",
